flux/apps/mimsy/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: mimsy
  name: web
spec:
  selector:
    app: web
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: http
