flux/apps/mimsy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  namespace: mimsy
  labels:
    kodai.ch/dns-create: "true"
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - cms.mimsy.kodai.ch
      secretName: cms-mimsy-kodai-ch-ingress-tls
  rules:
    - host: cms.mimsy.kodai.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: web
                port:
                  name: http
